--- a/Main_Embed2Detect_Giray.ipynb
+++ b/Main_Embed2Detect_Giray.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNsoyGr7KnryaJVDZ8H52R5",
+      "authorship_tag": "ABX9TyNjq1MCttokiGG+DgA1YKVN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,6 +235,93 @@
       "metadata": {
         "id": "xervcU3sL2es"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mAbGk1tIFyzP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There is a file called \"requirements.txt\"\n",
+        "\n",
+        "<blockquote><br>python=3.7\n",
+        "<br>gensim==3.8.1 # conda install -c conda-forge gensim\n",
+        "<br>scikit-learn==0.22.1\n",
+        "<br>pandas==0.25.3\n",
+        "<br>editdistance==0.5.3\n",
+        "<br>nltk==3.4.5\n",
+        "<br>matplotlib==3.1.2\n",
+        "<br>orderedset==2.0.3\n",
+        "\n",
+        "<para>steps to download nltk stopwords\n",
+        "<br>import nltk\n",
+        "<br>nltk.download('stopwords')</blockquote>\n"
+      ],
+      "metadata": {
+        "id": "TGaaqf46MtKQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from platform import python_version\n",
+        " \n",
+        " \n",
+        "print(\"Current Python Version-\", python_version())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5GMsyrPHM3MI",
+        "outputId": "00a35da4-7eae-4547-b4b7-18e4f6849de1"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Current Python Version- 3.7.15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WgZ3ZKHWNVxS",
+        "outputId": "ee6e553e-e3dd-4ba4-d85d-d6d2821198e9"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'conda-forge'\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sYSPgDkWNfOo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
